Add another clamp procedure after sun-glint removal step

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "96d3e500-ee94-4672-ada0-db7c400eee8c",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "52a93cd9-9a4b-484b-a2fb-24d67f07682d",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "f00b1d7c-a832-4fef-a196-01a8e8329752",
    "metadata": {},
    "outputs": [],
@@ -117,13 +117,16 @@
     "    cube_reflectance = safe_divide(np.pi * cube_radiance,\n",
     "                                   irr_selected[np.newaxis, np.newaxis, :])\n",
     "\n",
-    "    # Clamp\n",
+    "    # Clamp pra sun-glint removal\n",
     "    cube_reflectance = clamp_reflectance(cube_reflectance)\n",
     "\n",
     "    # Sun-glint removal\n",
     "    cube_reflectance_corrected = hedley_glint_removal(cube_reflectance,\n",
     "                                                      rad_wavelengths)\n",
     "\n",
+    "    # Clamp final (pasca sun-glint removal)\n",
+    "    cube_reflectance_corrected = clamp_reflectance(cube_reflectance_corrected)\n",
+    "    \n",
     "    # Load label mask\n",
     "    label_map, class_names = load_label_mask(mask_file, label_classes_file)\n",
     "\n",
@@ -142,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "4522bfd3-1c6f-449d-b30c-1fb658b42b55",
    "metadata": {},
    "outputs": [],
@@ -164,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "41eb5e71-146f-4b1e-b209-0e45e9152d87",
    "metadata": {},
    "outputs": [
@@ -189,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "ca5e448b-28fa-492d-8a7b-2ef8f8f9e37f",
    "metadata": {},
    "outputs": [
@@ -200,7 +203,7 @@
       "Keys: ['x', 'y', 'class_names']\n",
       "Reflectance shape: (2000, 900, 300)\n",
       "Mask shape: (2000, 900)\n",
-      "Reflectance min/max: -1.1074818 0.40337074\n",
+      "Reflectance min/max: 0.0 0.40337074\n",
       "Unique mask labels: [ 0 13 14 18 38]\n"
      ]
     }
