Add some comments

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -92,6 +92,7 @@
     "# =====================================================\n",
     "# Versi A: (Load full cube)\n",
     "# =====================================================\n",
+    "\n",
     "def process_tile_full(tile_id, base_path, out_path, mask_file, label_classes_file):\n",
     "    rad_data = base_path / f\"{tile_id}_radiance.bip\"\n",
     "    rad_hdr  = rad_data.with_suffix(\".bip.hdr\")\n",
@@ -150,19 +151,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Definisikan parameter tile\n",
-    "tile_id = \"massimal_smola_maholmen_202306211129-2_hsi_003\"\n",
+    "# =====================================================\n",
+    "# Pendefinisian parameter tile\n",
+    "# =====================================================\n",
     "\n",
-    "subfolder_cube_data = \"smola_maholmen_1129_data\"\n",
+    "tile_id = \"massimal_smola_maholmen_202306211129-2_hsi_003\" # untuk keperluan pencarian nama file\n",
+    "\n",
+    "subfolder_cube_data = \"smola_maholmen_1129_data\" # subfolder dari citra tile\n",
     "base_path = Path(\"../data/raw\") / subfolder_cube_data / \"radiance\" # lokasi cube radiance\n",
     "\n",
     "base_anno_path = Path(\"../data/annotation/segmentation_masks\") # lokasi keperluan anotasi\n",
-    "subfolder_anno_mask = \"smola_maholmen_1129_masks\" # misal pakai yang 1129\n",
+    "subfolder_anno_mask = \"smola_maholmen_1129_masks\" # subfolder yang berisi mask\n",
     "\n",
-    "mask_file = base_anno_path / subfolder_anno_mask / f\"{tile_id}.png\"\n",
-    "label_classes_file = base_anno_path / \"label_classes.json\"\n",
+    "mask_file = base_anno_path / subfolder_anno_mask / f\"{tile_id}.png\" # file mask\n",
+    "label_classes_file = base_anno_path / \"label_classes.json\" # file label_classes.json\n",
     "\n",
-    "out_path  = Path(\"../data/processed\")"
+    "out_path  = Path(\"../data/processed\") # output dari preprocess"
    ]
   },
   {
