Second attempt of training, but failed still due to memory error

--- a/notebooks/train_hybridsn_sgmt.ipynb
+++ b/notebooks/train_hybridsn_sgmt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "6a95dc77-6786-4eb7-9458-702f78fa2d0a",
    "metadata": {},
    "outputs": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "2c696af3-5826-4722-bdae-93483555b402",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "0898bb81-a9a6-439b-a6f6-380a66272726",
    "metadata": {},
    "outputs": [],
@@ -108,12 +108,13 @@
     "    return idx_to_name\n",
     "\n",
     "def normalize_reflectance(cube):\n",
-    "    \"\"\"Menormalkan nilai reflektansi ke rentang 0-1\"\"\"\n",
-    "    cube = np.nan_to_num(cube)\n",
-    "    scaler = MinMaxScaler()\n",
-    "    flat = cube.reshape(-1, cube.shape[-1])\n",
-    "    flat_scaled = scaler.fit_transform(flat)\n",
-    "    return flat_scaled.reshape(cube.shape)\n",
+    "    \"\"\"Menormalkan nilai reflektansi ke rentang 0-1 per tile\"\"\"\n",
+    "    cube = np.nan_to_num(cube).astype(np.float32)\n",
+    "    min_val = np.nanmin(cube)\n",
+    "    max_val = np.nanmax(cube)\n",
+    "    if max_val > min_val:\n",
+    "        cube = (cube - min_val) / (max_val - min_val)\n",
+    "    return cube\n",
     "\n",
     "class SeaweedDataset(Dataset):\n",
     "    def __init__(self, data_files, label_map, tile_size=128):\n",
@@ -124,7 +125,7 @@
     "\n",
     "        for f in data_files:\n",
     "            data = np.load(f)\n",
-    "            x = data[\"x\"]\n",
+    "            x = data[\"x\"].astype(np.float32)\n",
     "            y = data[\"y\"]\n",
     "            x = normalize_reflectance(x)\n",
     "            H, W, C = x.shape\n",
@@ -135,6 +136,7 @@
     "                    x_tile = x[i:i+tile_size, j:j+tile_size, :]\n",
     "                    y_tile = y[i:i+tile_size, j:j+tile_size]\n",
     "                    if np.any(y_tile > 0):  # abaikan tile kosong\n",
+    "                        x_tile = normalize_reflectance(x_tile)\n",
     "                        self.tiles.append((x_tile, y_tile))\n",
     "\n",
     "    def __len__(self):\n",
@@ -149,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "32a8f3df-9e8e-434a-80fa-e38b615578bb",
    "metadata": {},
    "outputs": [
@@ -160,7 +162,7 @@
       "Jumlah total kelas: 41\n",
       "Contoh nama kelas: ['Deep water', 'Substrate', 'Rock', 'Bedrock', 'Boulder']\n",
       "\n",
-      "Total file ditemukan: 18\n",
+      "Total file ditemukan: 3\n",
       "massimal_smola_maholmen_202306211129-2_hsi_003_processed.npz -> Label unik: [ 0 13 14 18 38]\n",
       "massimal_smola_maholmen_202306211129-2_hsi_004_processed.npz -> Label unik: [ 0 12]\n",
       "massimal_smola_maholmen_202306211129-2_hsi_008_processed.npz -> Label unik: [ 0 12]\n"
@@ -168,17 +170,14 @@
     },
     {
      "ename": "MemoryError",
-     "evalue": "Unable to allocate 515. MiB for an array with shape (2000, 900, 300) and data type bool",
+     "evalue": "Unable to allocate 2.01 GiB for an array with shape (2000, 900, 300) and data type float32",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[4], line 24\u001b[0m\n\u001b[0;32m     21\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mos\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mbasename(f)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m -> Label unik: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00munique_labels\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     23\u001b[0m \u001b[38;5;66;03m# Buat dataset dan dataloader\u001b[39;00m\n\u001b[1;32m---> 24\u001b[0m dataset \u001b[38;5;241m=\u001b[39m \u001b[43mSeaweedDataset\u001b[49m\u001b[43m(\u001b[49m\u001b[43mall_files\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlabel_map\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtile_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m128\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     26\u001b[0m \u001b[38;5;66;03m# Split train-val 80%-20%\u001b[39;00m\n\u001b[0;32m     27\u001b[0m n \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(dataset)\n",
-      "Cell \u001b[1;32mIn[3], line 31\u001b[0m, in \u001b[0;36mSeaweedDataset.__init__\u001b[1;34m(self, data_files, label_map, tile_size)\u001b[0m\n\u001b[0;32m     29\u001b[0m x \u001b[38;5;241m=\u001b[39m data[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mx\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m     30\u001b[0m y \u001b[38;5;241m=\u001b[39m data[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124my\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m---> 31\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[43mnormalize_reflectance\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     32\u001b[0m H, W, C \u001b[38;5;241m=\u001b[39m x\u001b[38;5;241m.\u001b[39mshape\n\u001b[0;32m     34\u001b[0m \u001b[38;5;66;03m# Membagi citra menjadi tile berukuran tile_size x tile_size\u001b[39;00m\n",
-      "Cell \u001b[1;32mIn[3], line 14\u001b[0m, in \u001b[0;36mnormalize_reflectance\u001b[1;34m(cube)\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mnormalize_reflectance\u001b[39m(cube):\n\u001b[0;32m     13\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Menormalkan nilai reflektansi ke rentang 0-1\"\"\"\u001b[39;00m\n\u001b[1;32m---> 14\u001b[0m     cube \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnan_to_num\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcube\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     15\u001b[0m     scaler \u001b[38;5;241m=\u001b[39m MinMaxScaler()\n\u001b[0;32m     16\u001b[0m     flat \u001b[38;5;241m=\u001b[39m cube\u001b[38;5;241m.\u001b[39mreshape(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, cube\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m])\n",
-      "File \u001b[1;32m~\\miniconda3\\envs\\algae\\lib\\site-packages\\numpy\\lib\\_type_check_impl.py:479\u001b[0m, in \u001b[0;36mnan_to_num\u001b[1;34m(x, copy, nan, posinf, neginf)\u001b[0m\n\u001b[0;32m    477\u001b[0m idx_nan \u001b[38;5;241m=\u001b[39m isnan(d)\n\u001b[0;32m    478\u001b[0m idx_posinf \u001b[38;5;241m=\u001b[39m isposinf(d)\n\u001b[1;32m--> 479\u001b[0m idx_neginf \u001b[38;5;241m=\u001b[39m \u001b[43misneginf\u001b[49m\u001b[43m(\u001b[49m\u001b[43md\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    480\u001b[0m _nx\u001b[38;5;241m.\u001b[39mcopyto(d, nan, where\u001b[38;5;241m=\u001b[39midx_nan)\n\u001b[0;32m    481\u001b[0m _nx\u001b[38;5;241m.\u001b[39mcopyto(d, maxf, where\u001b[38;5;241m=\u001b[39midx_posinf)\n",
-      "File \u001b[1;32m~\\miniconda3\\envs\\algae\\lib\\site-packages\\numpy\\lib\\_ufunclike_impl.py:206\u001b[0m, in \u001b[0;36misneginf\u001b[1;34m(x, out)\u001b[0m\n\u001b[0;32m    203\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mThis operation is not supported for \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdtype\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m values \u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m    204\u001b[0m                     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbecause it would be ambiguous.\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01me\u001b[39;00m\n\u001b[0;32m    205\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m--> 206\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mnx\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlogical_and\u001b[49m\u001b[43m(\u001b[49m\u001b[43mis_inf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msignbit\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mout\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mMemoryError\u001b[0m: Unable to allocate 515. MiB for an array with shape (2000, 900, 300) and data type bool"
+      "Cell \u001b[1;32mIn[8], line 25\u001b[0m\n\u001b[0;32m     22\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mos\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mbasename(f)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m -> Label unik: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00munique_labels\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     24\u001b[0m \u001b[38;5;66;03m# Buat dataset dan dataloader\u001b[39;00m\n\u001b[1;32m---> 25\u001b[0m dataset \u001b[38;5;241m=\u001b[39m \u001b[43mSeaweedDataset\u001b[49m\u001b[43m(\u001b[49m\u001b[43mall_files\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlabel_map\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtile_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m128\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     27\u001b[0m \u001b[38;5;66;03m# Split train-val 80%-20%\u001b[39;00m\n\u001b[0;32m     28\u001b[0m n \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(dataset)\n",
+      "Cell \u001b[1;32mIn[7], line 30\u001b[0m, in \u001b[0;36mSeaweedDataset.__init__\u001b[1;34m(self, data_files, label_map, tile_size)\u001b[0m\n\u001b[0;32m     28\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m f \u001b[38;5;129;01min\u001b[39;00m data_files:\n\u001b[0;32m     29\u001b[0m     data \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mload(f)\n\u001b[1;32m---> 30\u001b[0m     x \u001b[38;5;241m=\u001b[39m \u001b[43mdata\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mx\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mastype\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfloat32\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     31\u001b[0m     y \u001b[38;5;241m=\u001b[39m data[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124my\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m     32\u001b[0m     x \u001b[38;5;241m=\u001b[39m normalize_reflectance(x)\n",
+      "\u001b[1;31mMemoryError\u001b[0m: Unable to allocate 2.01 GiB for an array with shape (2000, 900, 300) and data type float32"
      ]
     }
    ],
@@ -195,7 +194,8 @@
     "print(\"Contoh nama kelas:\", list(label_map.values())[:5])\n",
     "\n",
     "# Ambil semua file .npz hasil preprocessing\n",
-    "all_files = sorted([os.path.join(data_dir, f) for f in os.listdir(data_dir) if f.endswith(\".npz\")])\n",
+    "N_FILES_TO_LOAD = 3\n",
+    "all_files = sorted([os.path.join(data_dir, f) for f in os.listdir(data_dir) if f.endswith(\".npz\")])[:N_FILES_TO_LOAD]\n",
     "print(f\"\\nTotal file ditemukan: {len(all_files)}\")\n",
     "\n",
     "# Tampilkan label unik per file\n",
