Third attempt of training, but failed still due to memory error

--- a/notebooks/train_hybridsn_sgmt.ipynb
+++ b/notebooks/train_hybridsn_sgmt.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "0898bb81-a9a6-439b-a6f6-380a66272726",
    "metadata": {},
    "outputs": [],
@@ -117,41 +117,57 @@
     "    return cube\n",
     "\n",
     "class SeaweedDataset(Dataset):\n",
-    "    def __init__(self, data_files, label_map, tile_size=128):\n",
+    "    \"\"\"\n",
+    "    Dataset tile-based hemat memori.\n",
+    "    Tile akan dibaca langsung dari file .npz hanya saat diperlukan,\n",
+    "    bukan semua dimuat ke RAM sekaligus.\n",
+    "    \"\"\"\n",
+    "    def __init__(self, data_files, label_map, tile_size=128, normalize=True):\n",
     "        self.data_files = data_files\n",
     "        self.label_map = label_map\n",
     "        self.tile_size = tile_size\n",
-    "        self.tiles = []\n",
+    "        self.normalize = normalize\n",
     "\n",
-    "        for f in data_files:\n",
-    "            data = np.load(f)\n",
-    "            x = data[\"x\"].astype(np.float32)\n",
-    "            y = data[\"y\"]\n",
-    "            x = normalize_reflectance(x)\n",
-    "            H, W, C = x.shape\n",
+    "        # Hanya menyimpan indeks tile, bukan data mentah\n",
+    "        self.index = []  # daftar (file_index, i, j)\n",
+    "        self.file_shapes = []\n",
     "\n",
-    "            # Membagi citra menjadi tile berukuran tile_size x tile_size\n",
-    "            for i in range(0, H, tile_size):\n",
-    "                for j in range(0, W, tile_size):\n",
-    "                    x_tile = x[i:i+tile_size, j:j+tile_size, :]\n",
-    "                    y_tile = y[i:i+tile_size, j:j+tile_size]\n",
-    "                    if np.any(y_tile > 0):  # abaikan tile kosong\n",
-    "                        x_tile = normalize_reflectance(x_tile)\n",
-    "                        self.tiles.append((x_tile, y_tile))\n",
+    "        for file_idx, path in enumerate(data_files):\n",
+    "            with np.load(path) as data:\n",
+    "                H, W, _ = data[\"x\"].shape\n",
+    "            self.file_shapes.append((H, W))\n",
+    "            for i in range(0, H - tile_size + 1, tile_size):\n",
+    "                for j in range(0, W - tile_size + 1, tile_size):\n",
+    "                    self.index.append((file_idx, i, j))\n",
+    "\n",
+    "        print(f\"[INFO] Total tile terdaftar: {len(self.index)} dari {len(data_files)} file\")\n",
     "\n",
     "    def __len__(self):\n",
-    "        return len(self.tiles)\n",
+    "        return len(self.index)\n",
     "\n",
     "    def __getitem__(self, idx):\n",
-    "        x_tile, y_tile = self.tiles[idx]\n",
-    "        x_tile = torch.tensor(x_tile.transpose(2, 0, 1), dtype=torch.float32)\n",
-    "        y_tile = torch.tensor(y_tile, dtype=torch.long)\n",
-    "        return x_tile, y_tile\n"
+    "        file_idx, i, j = self.index[idx]\n",
+    "        path = self.data_files[file_idx]\n",
+    "        with np.load(path) as data:\n",
+    "            x = data[\"x\"][i:i+self.tile_size, j:j+self.tile_size, :]\n",
+    "            y = data[\"y\"][i:i+self.tile_size, j:j+self.tile_size]\n",
+    "\n",
+    "        # Abaikan tile kosong (semua 0)\n",
+    "        if not np.any(y > 0):\n",
+    "            # Jika tile kosong, ambil tile lain secara acak agar batch tetap penuh\n",
+    "            return self.__getitem__(np.random.randint(0, len(self.index)))\n",
+    "\n",
+    "        if self.normalize:\n",
+    "            x = normalize_reflectance(x)\n",
+    "\n",
+    "        x_tensor = torch.tensor(x.transpose(2, 0, 1), dtype=torch.float32)\n",
+    "        y_tensor = torch.tensor(y, dtype=torch.long)\n",
+    "        return x_tensor, y_tensor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "32a8f3df-9e8e-434a-80fa-e38b615578bb",
    "metadata": {},
    "outputs": [
@@ -170,14 +186,16 @@
     },
     {
      "ename": "MemoryError",
-     "evalue": "Unable to allocate 2.01 GiB for an array with shape (2000, 900, 300) and data type float32",
+     "evalue": "Unable to allocate 2.01 GiB for an array with shape (540000000,) and data type float32",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[8], line 25\u001b[0m\n\u001b[0;32m     22\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mos\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mbasename(f)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m -> Label unik: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00munique_labels\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     24\u001b[0m \u001b[38;5;66;03m# Buat dataset dan dataloader\u001b[39;00m\n\u001b[1;32m---> 25\u001b[0m dataset \u001b[38;5;241m=\u001b[39m \u001b[43mSeaweedDataset\u001b[49m\u001b[43m(\u001b[49m\u001b[43mall_files\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlabel_map\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtile_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m128\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     27\u001b[0m \u001b[38;5;66;03m# Split train-val 80%-20%\u001b[39;00m\n\u001b[0;32m     28\u001b[0m n \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(dataset)\n",
-      "Cell \u001b[1;32mIn[7], line 30\u001b[0m, in \u001b[0;36mSeaweedDataset.__init__\u001b[1;34m(self, data_files, label_map, tile_size)\u001b[0m\n\u001b[0;32m     28\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m f \u001b[38;5;129;01min\u001b[39;00m data_files:\n\u001b[0;32m     29\u001b[0m     data \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mload(f)\n\u001b[1;32m---> 30\u001b[0m     x \u001b[38;5;241m=\u001b[39m \u001b[43mdata\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mx\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mastype\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfloat32\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     31\u001b[0m     y \u001b[38;5;241m=\u001b[39m data[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124my\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m     32\u001b[0m     x \u001b[38;5;241m=\u001b[39m normalize_reflectance(x)\n",
-      "\u001b[1;31mMemoryError\u001b[0m: Unable to allocate 2.01 GiB for an array with shape (2000, 900, 300) and data type float32"
+      "Cell \u001b[1;32mIn[11], line 25\u001b[0m\n\u001b[0;32m     22\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mos\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mbasename(f)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m -> Label unik: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00munique_labels\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     24\u001b[0m \u001b[38;5;66;03m# Buat dataset dan dataloader\u001b[39;00m\n\u001b[1;32m---> 25\u001b[0m dataset \u001b[38;5;241m=\u001b[39m \u001b[43mSeaweedDataset\u001b[49m\u001b[43m(\u001b[49m\u001b[43mall_files\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlabel_map\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtile_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m128\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     27\u001b[0m \u001b[38;5;66;03m# Split train-val (80%-20%)\u001b[39;00m\n\u001b[0;32m     28\u001b[0m n \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(dataset)\n",
+      "Cell \u001b[1;32mIn[9], line 39\u001b[0m, in \u001b[0;36mSeaweedDataset.__init__\u001b[1;34m(self, data_files, label_map, tile_size, normalize)\u001b[0m\n\u001b[0;32m     37\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m file_idx, path \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(data_files):\n\u001b[0;32m     38\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m np\u001b[38;5;241m.\u001b[39mload(path) \u001b[38;5;28;01mas\u001b[39;00m data:\n\u001b[1;32m---> 39\u001b[0m         H, W, _ \u001b[38;5;241m=\u001b[39m \u001b[43mdata\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mx\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mshape\n\u001b[0;32m     40\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfile_shapes\u001b[38;5;241m.\u001b[39mappend((H, W))\n\u001b[0;32m     41\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m0\u001b[39m, H \u001b[38;5;241m-\u001b[39m tile_size \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m, tile_size):\n",
+      "File \u001b[1;32m~\\miniconda3\\envs\\algae\\lib\\site-packages\\numpy\\lib\\_npyio_impl.py:256\u001b[0m, in \u001b[0;36mNpzFile.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m    254\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m magic \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mformat\u001b[39m\u001b[38;5;241m.\u001b[39mMAGIC_PREFIX:\n\u001b[0;32m    255\u001b[0m     \u001b[38;5;28mbytes\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mzip\u001b[38;5;241m.\u001b[39mopen(key)\n\u001b[1;32m--> 256\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mformat\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_array\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mbytes\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m    257\u001b[0m \u001b[43m                             \u001b[49m\u001b[43mallow_pickle\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mallow_pickle\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    258\u001b[0m \u001b[43m                             \u001b[49m\u001b[43mpickle_kwargs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpickle_kwargs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    259\u001b[0m \u001b[43m                             \u001b[49m\u001b[43mmax_header_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmax_header_size\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    260\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    261\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mzip\u001b[38;5;241m.\u001b[39mread(key)\n",
+      "File \u001b[1;32m~\\miniconda3\\envs\\algae\\lib\\site-packages\\numpy\\lib\\format.py:847\u001b[0m, in \u001b[0;36mread_array\u001b[1;34m(fp, allow_pickle, pickle_kwargs, max_header_size)\u001b[0m\n\u001b[0;32m    834\u001b[0m     array \u001b[38;5;241m=\u001b[39m numpy\u001b[38;5;241m.\u001b[39mfromfile(fp, dtype\u001b[38;5;241m=\u001b[39mdtype, count\u001b[38;5;241m=\u001b[39mcount)\n\u001b[0;32m    835\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    836\u001b[0m     \u001b[38;5;66;03m# This is not a real file. We have to read it the\u001b[39;00m\n\u001b[0;32m    837\u001b[0m     \u001b[38;5;66;03m# memory-intensive way.\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    845\u001b[0m     \u001b[38;5;66;03m# not correctly instantiate zero-width string dtypes; see\u001b[39;00m\n\u001b[0;32m    846\u001b[0m     \u001b[38;5;66;03m# https://github.com/numpy/numpy/pull/6430\u001b[39;00m\n\u001b[1;32m--> 847\u001b[0m     array \u001b[38;5;241m=\u001b[39m \u001b[43mnumpy\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mndarray\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcount\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdtype\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    849\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m dtype\u001b[38;5;241m.\u001b[39mitemsize \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m    850\u001b[0m         \u001b[38;5;66;03m# If dtype.itemsize == 0 then there's nothing more to read\u001b[39;00m\n\u001b[0;32m    851\u001b[0m         max_read_count \u001b[38;5;241m=\u001b[39m BUFFER_SIZE \u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m \u001b[38;5;28mmin\u001b[39m(BUFFER_SIZE, dtype\u001b[38;5;241m.\u001b[39mitemsize)\n",
+      "\u001b[1;31mMemoryError\u001b[0m: Unable to allocate 2.01 GiB for an array with shape (540000000,) and data type float32"
      ]
     }
    ],
@@ -187,19 +205,19 @@
     "# ===========================================\n",
     "\n",
     "data_dir = \"../data/processed\"  # lokasi data hasil preprocessing\n",
-    "label_json_path = \"../data/annotation/segmentation_masks/label_classes.json\" # lokasi file label_classes.json\n",
+    "label_json_path = \"../data/annotation/segmentation_masks/label_classes.json\"  # lokasi file label_classes.json\n",
     "\n",
     "label_map = load_label_mapping(label_json_path)\n",
     "print(f\"Jumlah total kelas: {len(label_map)}\")\n",
     "print(\"Contoh nama kelas:\", list(label_map.values())[:5])\n",
     "\n",
-    "# Ambil semua file .npz hasil preprocessing\n",
-    "N_FILES_TO_LOAD = 3\n",
+    "# Ambil sebagian file untuk uji awal agar tidak kehabisan memori\n",
+    "N_FILES_TO_LOAD = 3   # tingkatkan kalau sudah stabil\n",
     "all_files = sorted([os.path.join(data_dir, f) for f in os.listdir(data_dir) if f.endswith(\".npz\")])[:N_FILES_TO_LOAD]\n",
     "print(f\"\\nTotal file ditemukan: {len(all_files)}\")\n",
     "\n",
-    "# Tampilkan label unik per file\n",
-    "for f in all_files[:3]:\n",
+    "# Tampilkan label unik per file (untuk verifikasi)\n",
+    "for f in all_files:\n",
     "    data = np.load(f)\n",
     "    mask = data[\"y\"]\n",
     "    unique_labels = np.unique(mask)\n",
@@ -208,7 +226,7 @@
     "# Buat dataset dan dataloader\n",
     "dataset = SeaweedDataset(all_files, label_map, tile_size=128)\n",
     "\n",
-    "# Split train-val 80%-20%\n",
+    "# Split train-val (80%-20%)\n",
     "n = len(dataset)\n",
     "idxs = list(range(n))\n",
     "random.shuffle(idxs)\n",
@@ -219,8 +237,7 @@
     "val_loader   = DataLoader(dataset, batch_size=4, sampler=torch.utils.data.SubsetRandomSampler(val_idx))\n",
     "\n",
     "num_classes = len(label_map)\n",
-    "print(f\"\\nJumlah tile train: {len(train_idx)}, val: {len(val_idx)}\")\n",
-    "\n"
+    "print(f\"\\nJumlah tile train: {len(train_idx)}, val: {len(val_idx)}\")\n"
    ]
   },
   {
