Add notebook for npz conversion

--- a/notebooks/convert_npz_to_npy.ipynb
+++ b/notebooks/convert_npz_to_npy.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "55deac42-c036-4676-b5e1-2c6c475071a0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sumber: ../data/processed\n",
+      "Tujuan: ../data/npy_converted\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import os\n",
@@ -20,10 +29,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3a48d2f0-356d-4ed9-a169-17fa98a124ce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OK Berhasil konversi: massimal_smola_maholmen_202306211129-2_hsi_003_processed.npz\n",
+      "OK Berhasil konversi: massimal_smola_maholmen_202306211129-2_hsi_004_processed.npz\n",
+      "OK Berhasil konversi: massimal_smola_maholmen_202306211129-2_hsi_008_processed.npz\n",
+      "OK Berhasil konversi: massimal_smola_maholmen_202306211129-2_hsi_009_processed.npz\n",
+      "OK Berhasil konversi: massimal_smola_maholmen_202306211129-2_hsi_013_processed.npz\n",
+      "OK Berhasil konversi: massimal_smola_maholmen_202306211228-2_hsi_004_processed.npz\n",
+      "OK Berhasil konversi: massimal_smola_maholmen_202306211228-2_hsi_005_processed.npz\n",
+      "OK Berhasil konversi: massimal_smola_maholmen_202306211228-2_hsi_006_processed.npz\n",
+      "OK Berhasil konversi: massimal_smola_maholmen_202306211228-2_hsi_009_processed.npz\n",
+      "OK Berhasil konversi: massimal_smola_maholmen_202306211228-2_hsi_012_processed.npz\n",
+      "OK Berhasil konversi: massimal_smola_maholmen_202306211228-2_hsi_013_processed.npz\n",
+      "OK Berhasil konversi: massimal_smola_maholmen_202306211228-2_hsi_014_processed.npz\n",
+      "OK Berhasil konversi: massimal_smola_maholmen_202306211228-2_hsi_015_processed.npz\n",
+      "OK Berhasil konversi: massimal_smola_maholmen_202306211228-2_hsi_016_processed.npz\n",
+      "OK Berhasil konversi: massimal_smola_maholmen_202306211228-2_hsi_018_processed.npz\n",
+      "OK Berhasil konversi: massimal_smola_maholmen_202306211228-2_hsi_019_processed.npz\n",
+      "OK Berhasil konversi: massimal_smola_maholmen_202306211228-2_hsi_020_processed.npz\n",
+      "OK Berhasil konversi: massimal_smola_maholmen_202306211228-2_hsi_021_processed.npz\n"
+     ]
+    }
+   ],
    "source": [
     "for fname in sorted(os.listdir(src_dir)):\n",
     "    if not fname.endswith(\".npz\"):\n",
@@ -46,10 +80,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "a7af8879-c529-4174-88f0-394a6d5c8c06",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total file hasil konversi: 18\n",
+      "Contoh: massimal_smola_maholmen_202306211129-2_hsi_003_processed_x.npy\n"
+     ]
+    }
+   ],
    "source": [
     "# Cek Hasil\n",
     "\n",
